# no_drop

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  build.yml  cd.yml  coverage.yml  docs.yml  publish.yml
src/: drop_guard.rs  drop_guard_msg.rs  into.rs  lib.rs  markers.rs  no_drop.rs  no_drop_msg.rs  test_macros.rs
src/guards/: drop_guard_empty.rs  drop_guard_msg.rs  drop_guard_pass.rs  mod.rs  test_macros.rs
src/no_drop/: mod.rs  no_drop_empty.rs  no_drop_msg.rs  no_drop_pass.rs
tests/: dbg.rs  into_no_drop.rs  no_drop.rs  release.rs
