[package]
name = "no_drop"
version = "0.1.0"
edition = "2021"
description = "A simple wrapper type that guards against a value being automatically dropped."
repository = "https://github.com/MaxMahem/no_drop"
license = "MIT OR Apache-2.0"
authors = [ "Austin Stanley <MaxTMahem@gmail.com>" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
