[package]
name = "no_drop"
version = "0.2.3"
edition = "2021"
description = "A simple wrapper type that guards against a value being automatically dropped."
repository = "https://github.com/MaxMahem/no_drop"
documentation = "https://MaxMahem.github.io/no_drop/index.html"
homepage = "https://github.com/MaxMahem/no_drop"
keywords = ["drop", "guard", "memory", "safety", "wrapper"]
categories = ["rust-patterns", "memory-management"]
license = "MIT OR Apache-2.0"
authors = [ "Austin Stanley <MaxTMahem@gmail.com>" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "2.1.0", features = ["as_ref", "deref", "deref_mut"] }
sealed = "0.6.0"
thiserror = "2.0.17"
